# ComfyUI_CatVTON_Wrapper

./: README.md  __init__.py  pyproject.toml  requirements.txt
py/: cat_vton.py  func.py
py/catvton/: cloth_masker.py  pipeline.py  utils.py  utils1.py
py/catvton/SCHP/: __init__.py
py/catvton/SCHP/networks/: AugmentCE2P.py
workflow/: catvton_example.json
